refactor: java 25 jextract